--- a/fizzbuzz/Makefile
+++ b/fizzbuzz/Makefile
@@ -11,12 +11,8 @@ SRCEXT := cpp
 SOURCES := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
 OBJECTS := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.o))
 CFLAGS := \
-	-g -Wall \
-	$(shell curl-config --cflags) \
-	$(shell pkg-config libxml++-2.6 --cflags)
-LIB := \
-	$(shell curl-config --libs) \
-	$(shell pkg-config libxml++-2.6 --libs)
+	-g -Wall
+LIB := 
 INC := -I include
 
 $(TARGET): $(OBJECTS)
